// orders.proto
syntax = "proto3";

// Пакет для определённых сущностей и служб
package orders.v1;

// Определяем пространство имен для генерации Go-кода
option go_package = "./";

// Импортируем стандартные типы Google
import "google/protobuf/timestamp.proto";

// Модель заказанного товара
message Item {
  string name = 1;
  int64 price = 2;
  int64 quantity = 3;
}

// Адрес доставки
message DeliveryAddress {
  string street = 1;
  string house = 2;
  string apartment = 3;
  string floor = 4;
  string comment = 5;
}

// Основной объект заказа
message Order {
  string id = 1;
  string user_id = 2;
  string order_number = 3;
  string fio = 4;
  string restaurant_id = 5;
  repeated Item items = 6;
  int64 total_price = 7;
  DeliveryAddress address = 8;
  string status = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp estimated_delivery = 12;
}

// Запрос на получение списка заказов
message GetOrdersRequest {
  google.protobuf.Timestamp from = 1; // Фильтрация заказов по дате
}

// Запрос на получение заказ по id
message GetOrderByIdRequest {
  string id = 1;
}

// Ответ на запрос получения заказов
message GetOrdersResponse {
  repeated Order orders = 1;
}

// Ответ на запрос получения заказов
message GetOrderByIdResponse {
  Order order = 1;
}

// Интерфейс службы, возвращающей заказы
service OrdersService {
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse);
}